syntax = "proto3";

option java_multiple_files =  true;

import "google/protobuf/empty.proto";

package com.cloudbees.train;

message Passenger {
  string firstName = 1;
  string lastName = 2;
  string emailAddress = 3;
}

message TicketPurchaseRequest {
  string boardingStation = 1;
  string destinationStation = 2;
  double ticketPrice = 3;
  Passenger passenger = 4;
}

message SectionBookingResponse {
  repeated SectionBooking sectionBooking = 1;
}

message SectionBooking {
  Passenger passenger = 1;
  int32 seatNumber = 2;
  string sectionName = 3;
}

message TicketReceiptResponse {
  Passenger passenger = 1;
  string boardingStation = 2;
  string destinationStation = 3;
  double pricePaid = 4;
  string section = 5;
  int32 seatNumber = 6;
  string bookingId = 7;
}

message BookingRequest {
  string bookingId = 1;
  string emailAddress = 2;
}

message SectionRequest {
  int32 sectionId = 1;
}

service TicketManagerService {
  rpc bookTicket(TicketPurchaseRequest) returns (TicketReceiptResponse);
  rpc getBookedTicketReceipt(BookingRequest) returns (TicketReceiptResponse);
  rpc getBookingsBySection(SectionRequest) returns (SectionBookingResponse);
  rpc deleteBooking(BookingRequest) returns (google.protobuf.Empty);
  rpc modifyPassengerSeat(BookingRequest) returns (TicketReceiptResponse);
}